--- a/index.html
+++ b/index.html
@@ -55,14 +55,19 @@
                         <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Nosotros</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" 
+                            
+                            <a href="#"
+                            class="nav-link dropdown-toggle"
+                            id="algo"
                             data-toggle="dropdown" 
                             aria-haspopup="true"
-                            role="button"
                             aria-expanded="false" 
-                            href="#">Servicios
+                            role="button"
+                            >
+                                Servicios
                             </a>
-                            <div class="dropdown-menu">
+
+                            <div class="dropdown-menu" aria-labelledby="algo">
                                 <a href="#" class="dropdown-item">A 001</a>
                                 <a href="#" class="dropdown-item">A 002</a>
                                 <a href="#" class="dropdown-item">A 003</a>
@@ -93,6 +98,8 @@
                         <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
                     </ul>
                 </nav>
+
+
             </div>
         </div>
     </div>
@@ -101,7 +108,7 @@
 
 
 
-    <script src="/js/jquery.js"></script>
+    <script src="/js/jquery.slim.js"></script>
     <script src="/js/popper.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     <script src="/js/scripts.js"></script>
